--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ scala:
    - 2.12.3
 
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION test
+  - sbt "++${TRAVIS_SCALA_VERSION}! -v" test
 
 jdk:
   - oraclejdk8
