--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,23 @@
-cache:
-  directories:
-    - $HOME/.ivy2/cache
-    - $HOME/.sbt/boot
+dist: xenial
+group: stable
 
 language: scala
+
+jdk: openjdk11
 
 scala:
    - 2.11.12
    - 2.12.8
+   - 2.13.0
 
 script:
   - sbt "++${TRAVIS_SCALA_VERSION}! -v" test
 
-jdk:
-  - oraclejdk8
-
 before_cache:
   - find $HOME/.ivy2 -name "ivydata-*.properties" -print -delete
   - find $HOME/.sbt  -name "*.lock"               -print -delete
+
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot
