--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,14 @@ jobs:
             java: 8
             distribution: temurin
             jobtype: 1
+          - os: ubuntu-latest
+            java: 17
+            distribution: temurin
+            jobtype: 2
+          - os: ubuntu-latest
+            java: 8
+            distribution: temurin
+            jobtype: 2
     runs-on: ${{ matrix.os }}
     env:
       JAVA_OPTS: -Xms800M -Xmx2G -Xss6M -XX:ReservedCodeCacheSize=128M -server -Dsbt.io.virtual=false -Dfile.encoding=UTF-8
@@ -26,28 +34,17 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Setup JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         distribution: "${{ matrix.distribution }}"
         java-version: "${{ matrix.java }}"
-    - name: Coursier cache
-      uses: coursier/cache-action@v6
-    - name: Cache sbt
-      uses: actions/cache@v2.1.7
-      with:
-        path: ~/.sbt
-        key: ${{ runner.os }}-sbt-cache-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
+        cache: sbt
     - name: Build and test (1)
       if: ${{ matrix.jobtype == 1 }}
       shell: bash
       run: |
         sbt -v +test
-    - name: Cleanup
+    - name: Build and test (2)
+      if: ${{ matrix.jobtype == 2 }}
       shell: bash
-      run: |
-        rm -rf "$HOME/.ivy2/local" || true
-        rm -r $(find $HOME/.sbt/boot -name "*-SNAPSHOT") || true
-        find $HOME/Library/Caches/Coursier/v1        -name "ivydata-*.properties" -delete || true
-        find $HOME/.ivy2/cache                       -name "ivydata-*.properties" -delete || true
-        find $HOME/.cache/coursier/v1                -name "ivydata-*.properties" -delete || true
-        find $HOME/.sbt                              -name "*.lock"               -delete || true
+      run: bazel test ...
