--- a/common-test/src/main/scala/gigahorsetest/BUILD
+++ b/common-test/src/main/scala/gigahorsetest/BUILD
@@ -1,21 +1,54 @@
 load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")
+load("@scala_multiverse//:cross_scala_config.bzl", "maven_dep")
 
 scala_library(
     name = "gigahorsetest",
     srcs = glob(["*.scala"]),
     deps = [
       "//core/src/main",
-      "@maven//:3rdparty/jvm/org/scalatest/scalatest",
-      "@maven//:3rdparty/jvm/ws/unfiltered/unfiltered-directives",
-      "@maven//:3rdparty/jvm/ws/unfiltered/unfiltered-filter",
-      "@maven//:3rdparty/jvm/ws/unfiltered/unfiltered-netty-websockets",
+      maven_dep("io.netty:netty-buffer"),
+      maven_dep("io.netty:netty-codec"),
+      maven_dep("io.netty:netty-codec-http"),
+      maven_dep("io.netty:netty-common"),
+      maven_dep("io.netty:netty-handler"),
+      maven_dep("io.netty:netty-transport"),
+      maven_dep("org.scalactic::scalactic"),
+      maven_dep("org.scalatest::scalatest"),
+      maven_dep("org.scalatest:scalatest-compatible"),
+      maven_dep("org.scalatest::scalatest-core"),
+      maven_dep("org.scalatest::scalatest-flatspec"),
+      maven_dep("org.scalatest::scalatest-matchers-core"),
+      maven_dep("org.scalatest::scalatest-shouldmatchers"),
+      maven_dep("ws.unfiltered::unfiltered"),
+      maven_dep("ws.unfiltered::unfiltered-directives"),
+      maven_dep("ws.unfiltered::unfiltered-filter"),
+      maven_dep("ws.unfiltered::unfiltered-netty"),
+      maven_dep("ws.unfiltered::unfiltered-netty-server"),
+      maven_dep("ws.unfiltered::unfiltered-netty-websockets"),
+      maven_dep("ws.unfiltered::unfiltered-util"),
     ],
     exports = [
       "//core/src/main",
-      "@maven//:3rdparty/jvm/org/scalatest/scalatest",
-      "@maven//:3rdparty/jvm/ws/unfiltered/unfiltered-directives",
-      "@maven//:3rdparty/jvm/ws/unfiltered/unfiltered-filter",
-      "@maven//:3rdparty/jvm/ws/unfiltered/unfiltered-netty-websockets",
+      maven_dep("io.netty:netty-buffer"),
+      maven_dep("io.netty:netty-codec"),
+      maven_dep("io.netty:netty-codec-http"),
+      maven_dep("io.netty:netty-common"),
+      maven_dep("io.netty:netty-handler"),
+      maven_dep("io.netty:netty-transport"),
+      maven_dep("org.scalactic::scalactic"),
+      maven_dep("org.scalatest::scalatest"),
+      maven_dep("org.scalatest:scalatest-compatible"),
+      maven_dep("org.scalatest::scalatest-core"),
+      maven_dep("org.scalatest::scalatest-flatspec"),
+      maven_dep("org.scalatest::scalatest-matchers-core"),
+      maven_dep("org.scalatest::scalatest-shouldmatchers"),
+      maven_dep("ws.unfiltered::unfiltered"),
+      maven_dep("ws.unfiltered::unfiltered-directives"),
+      maven_dep("ws.unfiltered::unfiltered-filter"),
+      maven_dep("ws.unfiltered::unfiltered-netty"),
+      maven_dep("ws.unfiltered::unfiltered-netty-server"),
+      maven_dep("ws.unfiltered::unfiltered-netty-websockets"),
+      maven_dep("ws.unfiltered::unfiltered-util"),
     ],
     visibility = ["//visibility:public"],
 )
