--- a/common-test/src/main/scala/gigahorsetest/BUILD.bazel
+++ b/common-test/src/main/scala/gigahorsetest/BUILD.bazel
@@ -1,5 +1,6 @@
-load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")
+load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_test")
 load("@scala_multiverse//:cross_scala_config.bzl", "maven_dep")
+load("//tools/rules/scala:scala.bzl", "scala_library")
 
 scala_library(
     name = "gigahorsetest",
