--- a/okhttp/src/main/scala/gigahorse/support/okhttp/BUILD.bazel
+++ b/okhttp/src/main/scala/gigahorse/support/okhttp/BUILD.bazel
@@ -1,6 +1,7 @@
-load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")
+load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_test")
 load("@twitter_rules_jvm_export//jvm_export:jvm_export.bzl", "jvm_export")
 load("@scala_multiverse//:cross_scala_config.bzl", "maven_dep")
+load("//tools/rules/scala:scala.bzl", "scala_library")
 
 scala_library(
     name = "okhttp",
