--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,11 @@ jobs:
         distribution: "${{ matrix.distribution }}"
         java-version: "${{ matrix.java }}"
         cache: sbt
+    - name: Bazel cache
+      uses: actions/cache@v3
+      with:
+        path: "/home/runner/.cache/bazel"
+        key: bazel-${{ hashFiles('.bazelrc', '.bazeliskrc', 'WORKSPACE', 'WORKSPACE.bazel', 'MODULE.bazel') }}
     - name: Build and test (1)
       if: ${{ matrix.jobtype == 1 }}
       shell: bash
